fixed navbar links link overflow

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -77,7 +77,6 @@ h4 {
   right: 0;
   background: $tertiary-color;
   box-shadow: -1px 1px 2px 0px $primary-color;
-
   transition: all 0.5s;
 
   .links {
@@ -86,7 +85,10 @@ h4 {
     justify-content: space-evenly;
     align-items: center;
     list-style-type: none;
+
     .link {
+ overflow:hidden;
+
       a {
         padding: 1rem 0;
         font-size: 1.3rem;
